fix validator error

--- a/source/html/blocks/main-nav.html
+++ b/source/html/blocks/main-nav.html
@@ -6,7 +6,7 @@
     <li class="main-nav__item"><a href="javascript:void(0);" class="main-nav__link main-nav__link--marked">Тестирование</a></li>
     <li class="main-nav__item"><a href="javascript:void(0);" class="main-nav__link main-nav__link--marked main-nav__link--markedOnlyOnDesktop">Блог</a></li>
   </ul>
-  <button class="menu-button" aria-label="Меню навигации" aria-expanded="false" aria-controls="main-nav__list"><div aria-hidden="true" class="line"></div></button>
+  <button class="menu-button" aria-label="Меню навигации" aria-expanded="false" aria-controls="main-nav__list"><span aria-hidden="true" class="line"></span></button>
 </nav>
 
 
